# socmed-sample

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  factories.py  fixture.json  pyproject.toml  readme.md  requirements.txt
.github/hooks/: pre-commit
.github/workflows/: black.yaml  local.yaml  main.yaml
accounts/migrations/: 0001_initial.py
backend/: .bandit  .env.example  .example.env  Dockerfile  pyproject.toml  requirements.txt
backend/config/: asgi.py  factories.py  middleware.py  settings.py  urls.py
backend/config/management/commands/: seed.py
backend/messenger/: admin.py  consumers.py  models.py  routing.py  serializers.py  views.py
backend/messenger/migrations/: 0003_remove_room_uuid.py
backend/posts/: tests.py  views.py
backend/posts/migrations/: 0002_delete_comment.py
backend/users/: admin.py  models.py  tests.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_image.py  0003_alter_user_image.py
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_inbox_user.py  0003_alter_message_inbox.py  0004_remove_message_inbox_remove_message_user_and_more.py  0005_message_created_at.py  0006_remove_message_receiver_thread_message_thread.py
config/: asgi.py  factories.py  middleware.py  settings.py  urls.py
config/fixtures/: user.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.js
frontend/src/components/: LoginComponent.jsx  MessengerComponent.jsx  NavbarComponent.jsx  PostsComponent.jsx  RegisterComponent.jsx  UserComponent.jsx  UsersComponent.jsx
frontend/src/css/: index.css
frontend/src/pages/: AboutPage.jsx  Chat.jsx  Feed.jsx  Home.jsx  HomePage.jsx  Login.jsx  LoginPage.jsx  Messenger.jsx  Register.jsx  Search.jsx  User.jsx  Users.jsx
frontend/src/redux/: authenticatedSlice.js  store.js  usersSlice.js
messenger/: admin.py  consumers.py  managers.py  models.py  routing.py  serializers.py  views.py
messenger/migrations/: 0001_initial.py  0002_room_remove_message_thread_delete_thread_and_more.py
posts/: models.py  serializers.py  tests.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py
tests/: test_serializers.py
users/: models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_user_followers_user_following.py  0002_user_image.py  0003_alter_user_followers_alter_user_following.py  0003_alter_user_image.py  0004_alter_user_followers_alter_user_following.py  0005_alter_user_following.py  0006_alter_user_following.py
utils/: factories.py
utils/management/commands/: init_db.py  print_posts.py  seed.py
