[tool.poetry]
name = "socmed-sample"
version = "0.1.0"
description = ""
authors = ["lyingtakemura <106205052+lyingtakemura@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
boto3 = "^1.26.19"
bandit = "^1.7.5"
black = "^23.3.0"
flake8 = "^6.0.0"
djoser = "^2.2.0"
pytest = "^7.3.1"
django-environ = "^0.10.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-storages = "^1.13.2"
psycopg2-binary = "^2.9.6"
faker = "^18.9.0"
factory-boy = "^3.2.1"
pillow = "^9.5.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
pre-commit = "^3.3.2"
django-debug-toolbar = "^4.1.0"
djangorestframework-yaml = "^2.0.0"
channels-redis = "^4.1.0"
django-filter = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
