[tool.poetry]
name = "socmed-sample"
version = "0.1.0"
description = ""
authors = ["lyingtakemura <106205052+lyingtakemura@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.4"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-debug-toolbar = "^4.2.0"
django-cors-headers = "^4.3.1"
djoser = "^2.2.2"
django-storages = "^1.14.2"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.0"
djangorestframework-yaml = "^2.0.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
pytest-mock = "^3.12.0"
pillow = "^10.1.0"
redis = "^5.0.1"
requests = "^2.31.0"
faker = "^20.1.0"
factory-boy = "^3.3.0"
channels-redis = "^4.1.0"
bandit = {extras = ["toml"], version = "^1.7.5"}
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.bandit]
exclude_dirs = ["tests", "fixtures", "frontend"]
exclude = "tests.py"